# MariaDB-Connector-Cxx

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  _connection_8cpp.html  _connection_8h_source.html  _my_s_q_l_c_x_x_8h.html  _my_s_q_l_c_x_x_8h_source.html  _r_e_a_d_m_e_8md.html  _result_8cpp.html  _result_8h.html  _result_8h_source.html  _statement_8cpp.html  _statement_8h.html  _statement_8h_source.html  _test_8h.html  _types_8h.html  annotated.html  class_bind-members.html  class_connection.html  class_field.html  class_result-members.html  class_result.html  class_row-members.html  class_row.html  class_row_iter-members.html  class_statement-members.html  class_statement.html  classes.html  client__plugin_8h.html  client__plugin_8h_source.html  config-win_8h.html  config-win_8h_source.html  dbug_8h.html  dbug_8h_source.html  dir_46b926254ede029bfa2cb5d9dc85b9b0.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_862595df79b76e8077a2a2a7fd7f9129.html  (+354 more)
cmake/: FindMariaDB.cmake
docs/html/: _connection_8h.html  _connection_8h_source.html  _result_8h.html  _result_8h_source.html  _statement_8h_source.html  _test_8cpp.html  _test_8h_source.html  _types_8cpp.html  _types_8h_source.html  annotated.html  class_bind.html  class_connection-members.html  class_connection.html  class_field-members.html  class_field.html  class_result-members.html  class_result.html  class_result_iter-members.html  class_result_iter.html  class_row-members.html  class_row.html  class_row_iter.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  pages.html  struct_s_q_l___t_y_p_e.html  todo.html
docs/html/search/: all_0.js  all_1.js  all_13.js  all_2.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_0.js  defines_1.js  enumvalues_0.js  enumvalues_2.js  enumvalues_5.js  files_1.js  files_4.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  pages_0.js  related_1.js  searchdata.js  variables_0.js  variables_1.js  variables_5.js  variables_9.js
docs/latex/: _connection_8cpp.tex  _connection_8h.tex  _my_s_q_l_c_x_x_8h.tex  _result_8cpp.tex  _result_8h.tex  _statement_8cpp.tex  _statement_8h.tex  _test_8cpp.tex  _test_8h.tex  _types_8cpp.tex  _types_8h.tex  annotated.tex  class_bind.tex  class_connection.tex  class_field.tex  class_result.tex  class_row.tex  class_statement.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_s_q_l___t_y_p_e.tex
include/: Connection.h  MySQLCXX.h  Result.h  SavePoint.h  Statement.h  Transaction.h  Types.h
search/: all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_13.js  defines_14.js  defines_15.js  defines_16.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  (+86 more)
src/: Connection.cpp  Result.cpp  SavePoint.cpp  Statement.cpp  Types.cpp  transaction.cpp
tests/: Test.cpp  Test.h  main.cpp
